--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -450,6 +450,7 @@
     padding-left: 0.5em;
     padding-right: 0.5em;
     font-weight: bold;
+    color: lightgoldenrodyellow;
   }
 
   @include breakpoint(max-width $large - 1px) {
