[Style] 사이트 컬러 조정

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -450,7 +450,7 @@
     padding-left: 0.5em;
     padding-right: 0.5em;
     font-weight: bold;
-    color: lightgoldenrodyellow;
+    color: #9ef1dd;
   }
 
   @include breakpoint(max-width $large - 1px) {
