--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -128,16 +128,16 @@ $base01: #2e3c43 !default;
 $base02: #314549 !default;
 $base03: #546e7a !default;
 $base04: #b2ccd6 !default;
-$base05: #eeffff !default;
+$base05: #ffffff !default;
 $base06: #eeffff !default;
 $base07: #ffffff !default;
-$base08: #f07178 !default;
-$base09: #f78c6c !default;
-$base0a: #ffcb6b !default;
-$base0b: #c3e88d !default;
-$base0c: #89ddff !default;
-$base0d: #82aaff !default;
-$base0e: #c792ea !default;
+$base08: #ffffff !default;
+$base09: #d0bf69 !default;
+$base0a: #d0a8ff !default;
+$base0b: #fc6a5d !default;
+$base0c: #ffffff !default;
+$base0d: #ffffff !default;
+$base0e: #fc5fa3 !default;
 $base0f: #ff5370 !default;
 
 /*
