--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -28,6 +28,7 @@ layout: default
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title p-name" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" class="u-url" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
+            {% include single-hits.html %}
           </h1>{% endif %}
           {% include page__meta.html %}
         </header>
