[Feat] single - title a tag 제거, icon 추가

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,7 +27,10 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title p-name" itemprop="headline">
-            <a href="{{ page.url | absolute_url }}" class="u-url" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
+            {% if page.icon %}
+              <i class="{{ page.icon }}"> </i>
+            {% endif %}
+            {{ page.title }}
             {% include single-hits.html %}
           </h1>{% endif %}
           {% include page__meta.html %}
