[Style] changed code block color

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -201,7 +201,7 @@ figure.highlight {
   }
   .nf {
     /* Name.Function */
-    color: $base0d;
+    color: #67B7A4;
   }
   .nl {
     /* Name.Label */
