--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -93,8 +93,13 @@ layout: default
     <div class="page__related">
       <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h2>
       <div class="grid__wrapper">
-        {% for post in site.related_posts limit:4 %}
-          {% include archive-single.html type="grid" %}
+        {% for post in site.posts %}
+          {% if post.group %} {% if page.group %}
+            {% if post.group == page.group %}
+              {% if post.id == page.id %} {% continue %} {% endif %}
+              {% include group-single.html %}
+            {% endif %}
+          {% endif %}{% endif %}
         {% endfor %}
       </div>
     </div>
@@ -107,7 +112,10 @@ layout: default
           {% if post.id == page.id %}
             {% continue %}
           {% endif %}
-          {% include archive-single.html type="grid" %}
+          
+          {% if post.sidebar.title == page.sidebar.title %}
+            {% include archive-single.html %}
+          {% endif %}
         {% endfor %}
       </div>
     </div>
