[Feat] group grid cell 가로 2개 씩 나오도록 변경

--- a/_includes/group-single.html
+++ b/_includes/group-single.html
@@ -4,7 +4,7 @@
   {% assign title = post.title %}
 {% endif %}
 
-<div class="{{ include.type | default: 'grid' }}__item">
+<div class="group__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     <h2 class="archive__item-title no_toc" itemprop="headline">
       {% if post.link %}
