[Style] primary-color 변경 67B7A4

--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #1a1c21 !default;
 $text-color: #ddddde !default;
-$primary-color: #8ac0b4 !default;
+$primary-color: #67B7A4 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
