--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
       <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
     {% endunless %}
     
-    <li><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fswift-man-blog%2Fhit-counter&count_bg=%2367B7A4&title_bg=%2367B7A4&icon=opsgenie.svg&icon_color=%23FFFFFF&title=hits&edge_flat=false"</li>
+    <li><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fswift-man-blog%2Fhit-counter&count_bg=%2367B7A4&title_bg=%2367B7A4&icon=opsgenie.svg&icon_color=%23FFFFFF&title=views&edge_flat=false"</li>
   </ul>
 </div>
 
