[Fix] 신규 포맷으로 변경

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -114,7 +114,7 @@ layout: default
           {% endif %}
           
           {% if post.sidebar.title == page.sidebar.title %}
-            {% include archive-single.html %}
+            {% include archive-single.html type="grid" %}
           {% endif %}
         {% endfor %}
       </div>
