[Fix] group -> tag 로 변경

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -89,13 +89,13 @@ layout: default
   </article>
 
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
-  {% if page.id and page.group %}
+  {% if page.id and page.tag %}
     <div class="page__related">
-      <h2 class="page__related-title"><font style="color: #67B7A4">"{{ page.group }}"</font> {{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }} <font style="color: #67B7A4"><i class="fas fa-caret-down"></i></font></h2>
+      <h2 class="page__related-title"><font style="color: #67B7A4">"{{ page.tag }}"</font> {{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }} <font style="color: #67B7A4"><i class="fas fa-caret-down"></i></font></h2>
       <div class="group__wrapper">
         {% for post in site.posts %}
-          {% if post.group %}
-            {% if post.group == page.group %}
+          {% if post.tag %}
+            {% if post.tag == page.tag %}
               {% if post.id == page.id %} {% continue %} {% endif %}
               {% include group-single.html %}
             {% endif %}
