[Includes] google adsense

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,6 @@
 <!-- start custom head snippets -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2802708598024982"
+     crossorigin="anonymous"></script>
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
