--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -39,13 +39,13 @@ body { margin: 0; }
 /* Selected elements */
 
 ::-moz-selection {
-  color: #fff;
-  background: #000;
+  color: #000;
+  background: #67B7A4;
 }
 
 ::selection {
-  color: #fff;
-  background: #000;
+  color: #000;
+  background: #67B7A4;
 }
 
 /* Display HTML5 elements in IE6-9 and FF3 */
